<resources>
    <string name="app_name">Partaker</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="full_name">Full Name</string>
    <string name="register">Register</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="register_as">Register As</string>
    <string name="donor">Donor</string>
    <string name="receiver">Receiver</string>
    <string name="already_have_an_account">Already Have An Account?</string>
    <string name="sign_in">Sign In</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="don_t_have_an_account">Don\'t Have An Account?</string>
    <string name="login">LOGIN</string>
    <string name="sign_up">Sign Up</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="sign_out">Sign Out</string>
    <string name="name">Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="city">City</string>
    <string name="blood_group">Blood Group</string>
    <string name="gender">Gender</string>

    <string name="nav_header_title">User Name</string>
    <string name="nav_header_subtitle">user@gmail.com</string>

    <string name="share_app">Share App</string>
    <string name="navigation_drawer_open">Open</string>
    <string name="navigation_drawer_close">Close</string>
    <!-- TODO: Remove or change this placeholder text -->

    <string name="ic_happy_font">&amp;#xe902</string>



    <string name="about_app_fragment">"        The major purpose to develop this app is to make the process of charity and donation as easy as possible. People can use this platform to donate and request donation.
        \n\n\n        This allows donors to post a donation of anything that they do not use anymore. Like that, people can also request for things that they are in need of. Major features of this app include post donations and post request to donations by the donors. Moreover, Receivers can posts requests and requests for donation things that they need.
        \n\n\n        NGO is the main stakeholder in this platform as all of the donation transactions ae handled by the NGO. NGO can approve all the requests of the users, either donor or receiver. NGO has the authority to ban any user that misuse the application by posting fake donations and requests.
        \n\n\n        This Application is Developed By Group# 16. If You Have Anything To Say You Can Contact Us Through faizii.3406@gmail.com or zainkhalidrj86@gmail.com or hashamnabeel@gmail.com </string>
    <string name="new_password">New Password</string>
    <string name="confirm">Confirm</string>
    <string name="current_password">Current Password</string>
    <string name="confirm_new_password">Confirm New Password</string>
    <string name="change_password">Change Password</string>

    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="about_app">About App</string>
    <string name="review_app">Review App</string>
    <string name="my_donations">My Donations</string>
    <string name="logout">Logout</string>
    <string name="reset_password">Reset Password</string>
    <string name="please_enter_your_registered_email">Please Enter Your Registered Email</string>
    <string name="delete_account">Delete Account</string>
    <string name="my_requests">My Requests</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="donation_name">Donation Name:</string>
    <string name="donation_name_fb">Donation Name FB</string>
    <string name="approve_donor_s_request">Approve Donor\'s Request</string>
    <string name="approve_receiver_s_request">Approve Receiver\'s Request</string>
    <string name="approve_request">Approve Request</string>
    <string name="approve_donation">Approve Donation</string>
    <string name="all_donations">All Donations</string>
    <string name="all_requests">All Requests</string>
    <string name="wish_list">Wish List</string>
    <string name="edit_donation">Edit Donation</string>
    <string name="delete_donation">Delete Donation</string>
    <string name="donation_description">Donation Description</string>
    <string name="update">Update</string>
    <string name="request_title">Request Title</string>
    <string name="request_name">Request Name</string>
    <string name="request_description">Request Description</string>
    <string name="edit_requests">Edit Request</string>
    <string name="banned_users">Banned Users</string>
    <string name="partaker">Partaker</string>
    <string name="post_title">Post Title:</string>
    <string name="add_image_optional">Add Image: (*Optional)</string>
    <string name="post">Post</string>
    <string name="post_description">Post Description:</string>
</resources>
