<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/rsz_loginbg"
    android:id="@+id/loginLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.LoginActivity">

<RelativeLayout
    android:layout_height="wrap_content"
    android:layout_width="275dp"
    android:padding="10dp"
    android:layout_centerInParent="true">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilLoginEmail"
        style="@style/Theme.MaterialComponents.Light.DarkActionBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etLoginEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="20"
            android:maxLength="25"
            android:textSize="14sp"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilLoginPassword"
        style="@style/Theme.MaterialComponents.Light.DarkActionBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:passwordToggleEnabled="true"
        android:layout_below="@+id/tilLoginEmail"
        android:layout_centerHorizontal="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etLoginPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="20"
            android:gravity="top|left"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textSize="14sp" />
    </com.google.android.material.textfield.TextInputLayout>


    <Button
        android:id="@+id/btnLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/button_style_corner"
        android:text="@string/login"
        android:layout_below="@+id/tilLoginPassword"
        android:layout_centerHorizontal="true"
        android:textAllCaps="true"
        android:layout_marginTop="20dp"
        android:textColor="@color/white"/>

    <TextView
        android:id="@+id/tvLoginForgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnLogin"
        android:layout_marginTop="15dp"
        android:layout_centerHorizontal="true"
        android:text="@string/forgot_password"
        android:textColor="@color/colorPrimary" />

   <LinearLayout
       android:id="@+id/ll_Login_1"
       android:layout_below="@id/tvLoginForgotPassword"
       android:layout_centerHorizontal="true"
       android:layout_marginTop="15dp"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content">

       <TextView
           android:id="@+id/tvLoginQuestion"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="@string/don_t_have_an_account" />

       <TextView
           android:id="@+id/tvLoginSignUp"
           android:layout_marginStart="2dp"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="@string/sign_up"
           android:textColor="@color/colorPrimary"/>

   </LinearLayout>

</RelativeLayout>

</RelativeLayout>