<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/simple_background"
    tools:context=".activities.RegisterActivity">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/ivRegister"
        android:layout_width="115dp"
        android:layout_height="115dp"
        android:layout_centerHorizontal="true"
        android:src="@drawable/add_user_male" />

    <LinearLayout
        android:layout_below="@+id/ivRegister"
        android:id="@+id/ll_register"
        android:orientation="vertical"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tvRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:textStyle="bold"
            android:text="Registration"
            android:textColor="@color/colorAccent"
            android:textSize="30sp">
        </TextView>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilRegFullName"
            style="@style/Theme.MaterialComponents.Light.DarkActionBar"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:background="@drawable/til_style_corner"
            android:layout_marginTop="15dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etFullName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="15"
                android:textColor="@color/cardview_dark_background"
                android:hint="@string/full_name"
                android:inputType="textPersonName"
                android:maxLength="20"
                android:textSize="14sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilRegPhoneNumber"
            style="@style/Theme.MaterialComponents.Light.DarkActionBar"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:background="@drawable/til_style_corner"
            android:layout_marginTop="5dp">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etPhoneNumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="20"
                android:maxLength="11"
                android:textSize="14sp"
                android:textColor="@color/cardview_dark_background"
                android:hint="@string/phone_number"
                android:inputType="phone"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilRegEmail"
            style="@style/Theme.MaterialComponents.Light.DarkActionBar"
            android:layout_width="match_parent"
            android:background="@drawable/til_style_corner"
            android:layout_height="45dp"
            android:layout_marginTop="5dp">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="20"
                android:maxLength="25"
                android:textSize="14sp"
                android:textColor="@color/cardview_dark_background"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilRegPassword"
            style="@style/Theme.MaterialComponents.Light.DarkActionBar"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            app:passwordToggleTint="@color/cardview_dark_background"
            android:background="@drawable/til_style_corner"
            app:passwordToggleEnabled="true"
            android:layout_marginTop="5dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="20"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:textSize="14sp"
                android:textColor="@color/cardview_dark_background"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilRegConfirmPassword"
            style="@style/Theme.MaterialComponents.Light.DarkActionBar"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:background="@drawable/til_style_corner"
            app:passwordToggleTint="@color/cardview_dark_background"
            app:passwordToggleEnabled="true"
            android:layout_marginTop="5dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etConfirmPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="20"
                android:hint="@string/confirm_password"
                android:inputType="textPassword"
                android:textSize="14sp"
                android:textColor="@color/cardview_dark_background"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilRegCity"
            style="@style/Theme.MaterialComponents.Light.DarkActionBar"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:background="@drawable/til_style_corner"
            android:layout_marginTop="5dp">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etCity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="20"
                android:maxLength="20"
                android:textSize="14sp"
                android:hint="@string/city"
                android:textColor="@color/cardview_dark_background"
                android:inputType="textPersonName"
                />
        </com.google.android.material.textfield.TextInputLayout>


        <LinearLayout
            android:layout_marginTop="5dp"
            android:orientation="horizontal"
            android:layout_gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tvGender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorAccent"
                android:layout_gravity="center_vertical"
                android:text="@string/gender"
                android:textSize="16sp" />

            <RadioGroup
                android:id="@+id/rgGender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center_vertical"
                android:padding="2dp">

                <RadioButton
                    android:id="@+id/rbMale"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:textColor="@color/colorAccent"
                    android:text="@string/male"
                    android:textSize="12sp" />

                <RadioButton
                    android:id="@+id/rbFemale"
                    android:textColor="@color/colorAccent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/female"
                    android:textSize="12sp" />
            </RadioGroup>

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_marginTop="2dp"
            android:layout_gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tvRegisterAs"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorAccent"
                android:layout_gravity="center_vertical"
                android:text="@string/register_as"
                android:textSize="16sp"/>

            <RadioGroup
                android:id="@+id/rgRegisterAs"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:orientation="horizontal"
                android:padding="2dp">

                <RadioButton
                    android:id="@+id/rbDonor"
                    android:textColor="@color/colorAccent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/donor"
                    android:textSize="12sp" />

                <RadioButton
                    android:id="@+id/rbReceiver"
                    android:textColor="@color/colorAccent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="2sp"
                    android:text="@string/receiver"
                    android:textSize="12sp" />
            </RadioGroup>

        </LinearLayout>

    <Button
        android:id="@+id/btnRegister"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:layout_marginTop="5dp"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/button_style_corner"
        android:textColor="@color/colorAccent"
        android:text="@string/register" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="15dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tvRegisterQuestion"
            android:textColor="@color/colorAccent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/already_have_an_account"/>

        <TextView
            android:id="@+id/tvRegisterSignIn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:text="@string/sign_in"
            android:textColor="@color/colorPrimaryDark"
            />
    </LinearLayout>

    </LinearLayout>
</RelativeLayout>