<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/colorPrimary"
    tools:context=".fragments.ProfileFragment"
    android:weightSum="3"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/ll_Profile_1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_weight="2.2">

        <ImageView
            android:id="@+id/ivProfilePic"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_gravity="center"
            android:layout_weight="1.3"
            app:srcCompat="@drawable/default_profile_pic" />

        <TextView
            android:id="@+id/tvProfileFullNameFB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textSize="16sp"
            android:layout_weight="0.7"
            android:textColor="@color/white"
            android:text="@string/name" />

    </LinearLayout>
    <LinearLayout
        android:id="@+id/ll_Profile_2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0.8"
        >

        <LinearLayout
            android:id="@+id/profileLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="100dp"
                android:layout_marginTop="50dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_baseline_email_24" />

                <TextView
                    android:id="@+id/tvProfileEmailFB"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:text="@string/email"
                    android:textColor="@color/defaultContentColor"
                    android:textSize="16sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="100dp"
                android:layout_marginTop="15dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_baseline_call_24"></ImageView>

                <TextView
                    android:id="@+id/tvProfilePhoneNumberFB"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:text="@string/phone_number"
                    android:textColor="@color/defaultContentColor"
                    android:textSize="16sp" />
                android:text="@string/email" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="100dp"
                android:layout_marginTop="15dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_baseline_location_city_24"></ImageView>

                <TextView
                    android:id="@+id/tvProfileCityFB"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:text="@string/city"
                    android:textColor="@color/defaultContentColor"
                    android:textSize="16sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="100dp"
                android:layout_marginTop="15dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_baseline_blood_24"></ImageView>

                <TextView
                    android:id="@+id/tvProfileBloodGroupFB"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:text="@string/blood_group"
                    android:textColor="@color/defaultContentColor"
                    android:textSize="16sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="100dp"
                android:layout_marginTop="15dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_baseline_gender_24"></ImageView>

                <TextView
                    android:id="@+id/tvProfileGenderFB"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:text="@string/gender"
                    android:textColor="@color/defaultContentColor"
                    android:textSize="16sp" />
            </LinearLayout>


            <TextView
                android:id="@+id/tvProfileChangePassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="35dp"
                android:padding="5dp"
                android:text="@string/change_password"
                android:textColor="@color/colorPrimary"
                android:textSize="16sp" />

            <Button
                android:id="@+id/btnProfileEditProfile"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:layout_marginTop="15dp"
                android:background="@drawable/button_style_corner"
                android:text="Edit Profile"
                android:textColor="@color/white"
                android:textSize="14sp" />

            <Button
                android:id="@+id/btnProfileDelete"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:layout_marginTop="15dp"
                android:background="@drawable/button_style_corner"
                android:padding="5dp"
                android:text="@string/delete_account"
                android:textColor="@color/white"
                android:textSize="14sp" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>